--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <title>My Personal Blog</title>
 
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <section>
 
       <div class="top-container">
-        <img class="top-cloud"src="images/cloud.png" alt="cloud-img">
+        <img class="top-cloud"src=cloud.png" alt="cloud-img">
         <h1>I'm Owen.</h1>
         <h2>A student at the ICT University.</h2>
         <p class="paragraph">A Software Engineer and a Web Developer</p>
-        <img class="bottom-cloud"src="images/cloud.png" alt="cloud-img">
-        <img src="images/mountain.png" alt="mountain-img">
+        <img class="bottom-cloud"src="cloud.png" alt="cloud-img">
+        <img src="mountain.png" alt="mountain-img">
       </div>
       <hr>
 
