--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>I'm Owen.</h1>
         <h2>A student at the ICT University.</h2>
         <p class="paragraph">A Software Engineer and a Web Developer</p>
-        <img class="bottom-cloud"src="cloud.png" alt="cloud-img">
+        <img class="bottom-cloud"src=cloud.png" alt="cloud-img">
         <img src="mountain.png" alt="mountain-img">
       </div>
       <hr>
